--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -4,6 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### *Run these cells only when in Google Colab*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# # Clone the repository\n",
+    "# !git clone https://github.com/beerger/mad_seminar_ws23.git\n",
+    "# # Move all content to the current directory\n",
+    "# !mv ./mad_seminar_s23/* ./\n",
+    "# # Remove the empty directory\n",
+    "# !rm -rf mad_seminar_s23/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Download the data\n",
+    "# !wget <link you got from your supervisor>\n",
+    "# # Extract the data\n",
+    "# !unzip -q ./data.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Install additional packages\n",
+    "# !pip install pytorch_lightning --quiet\n",
+    "# !pip install lpips"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports"
    ]
   },
