Added installation of hugging face cli

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -17,9 +17,9 @@
     "# # Clone the repository\n",
     "# !git clone https://github.com/beerger/mad_seminar_ws23.git\n",
     "# # Move all content to the current directory\n",
-    "# !mv ./mad_seminar_s23/* ./\n",
+    "# !mv ./mad_seminar_ws23/* ./\n",
     "# # Remove the empty directory\n",
-    "# !rm -rf mad_seminar_s23/"
+    "# !rm -rf mad_seminar_ws23/"
    ]
   },
   {
@@ -111,6 +111,16 @@
    "metadata": {},
    "source": [
     "## Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install hugginface cli for ImageNet\n",
+    "# !pip install -U \"huggingface_hub[cli]\""
    ]
   },
   {
