Now mounts gdrive and saves ImageNet there (to prevent re-downloads)

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Pixel-Level Localization on MVTec AD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### *Run these cells only when in Google Colab*"
    ]
   },
@@ -14,12 +21,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "# # Clone the repository\n",
-    "# !git clone https://github.com/beerger/mad_seminar_ws23.git\n",
-    "# # Move all content to the current directory\n",
-    "# !mv ./mad_seminar_ws23/* ./\n",
-    "# # Remove the empty directory\n",
-    "# !rm -rf mad_seminar_ws23/"
+    "# Clone the repository\n",
+    "!git clone https://github.com/beerger/mad_seminar_ws23.git\n",
+    "# Move all content to the current directory\n",
+    "!mv ./mad_seminar_ws23/* ./\n",
+    "# Remove the empty directory\n",
+    "!rm -rf mad_seminar_ws23/"
    ]
   },
   {
@@ -28,21 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Download the data\n",
-    "# !wget <link you got from your supervisor>\n",
-    "# # Extract the data\n",
-    "# !unzip -q ./data.zip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Install additional packages\n",
-    "# !pip install pytorch_lightning --quiet\n",
-    "# !pip install lpips"
+    "# Install additional packages\n",
+    "!pip install pytorch_lightning --quiet\n",
+    "!pip install lpips"
    ]
   },
   {
@@ -63,6 +58,8 @@
     "from torchvision import transforms\n",
     "import torch\n",
     "import yaml\n",
+    "\n",
+    "# FIXME: Change to correct imports\n",
     "\n",
     "from model.model import get_model\n",
     "from data_loader import TrainDataModule, get_all_test_dataloaders\n",
@@ -103,7 +100,9 @@
     "3. Extract 33 x 33 patches from each resized image\n",
     "4. Create two separate transform pipelines\n",
     "    * For Local-Net: Convert the 33x33 patches to PyTorch tensors and normalize them\n",
-    "    * For ResNet-18 (teacher model): Resize the 33x33 patches to 224x224, then convert to tensors and normalize"
+    "    * For ResNet-18 (teacher model): Resize the 33x33 patches to 224x224, then convert to tensors and normalize\n",
+    "\n",
+    "<span style=\"color:yellow\"> **Note**: All pre-processing is done by *ImageNetDataModule* provided in *image_net_data_loader.py* </span>"
    ]
   },
   {
@@ -119,8 +118,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install hugginface cli for ImageNet\n",
-    "# !pip install -U \"huggingface_hub[cli]\""
+    "# Required imports to use ImageNet from Hugging Face\n",
+    "!pip install -U \"huggingface_hub[cli]\"\n",
+    "!pip install datasets\n",
+    "# To login, `huggingface_hub` requires a token generated from https://huggingface.co/settings/tokens\n",
+    "!huggingface-cli login"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mount Google Drive in Colab"
    ]
   },
   {
@@ -129,11 +138,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1:\n",
-    "\n",
-    "from datasets import load_dataset\n",
-    "# If the dataset is gated/private, make sure you have run huggingface-cli login\n",
-    "dataset = load_dataset(\"imagenet-1k\")"
+    "from google.colab import drive\n",
+    "# Will provide you with an authentication link\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set Cache Directory"
    ]
   },
   {
@@ -141,7 +155,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "# Set a path on your Google Drive for the cache\n",
+    "cache_dir = '/content/drive/MyDrive/ImageNet'\n",
+    "\n",
+    "# Make sure the cache directory exists\n",
+    "os.makedirs(cache_dir, exist_ok=True)\n",
+    "\n",
+    "# Load the dataset with specified cache directory\n",
+    "dataset = load_dataset('imagenet-1k', cache_dir=cache_dir)\n"
+   ]
   },
   {
    "cell_type": "markdown",
