Using train_dataloader

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports"
+    "## Imports for Local-Net"
    ]
   },
   {
@@ -53,16 +53,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import pytorch_lightning as pl\n",
-    "from torchvision import transforms\n",
-    "import torch\n",
     "import yaml\n",
     "\n",
-    "# FIXME: Change to correct imports\n",
-    "\n",
-    "from model.model import get_model\n",
-    "from data_loader import TrainDataModule, get_all_test_dataloaders\n",
+    "from model.local_net import LocalNet\n",
+    "from model.model_utils import load_resnet_18_teacher_model\n",
+    "from model.student_training_module import StudentTrainingModule\n",
+    "from image_net_data_loader import ImageNetDataModule\n",
     "\n",
     "# autoreload imported modules\n",
     "%load_ext autoreload\n",
@@ -109,7 +106,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data"
+    "## Load the config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./configs/local_net_distillation.yaml', 'r') as f:\n",
+    "    config = yaml.safe_load(f)\n",
+    "\n",
+    "# Reproducibility\n",
+    "pl.seed_everything(config['seed'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and visualize data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Huggingface imports"
    ]
   },
   {
@@ -173,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the Distillation config"
+    "Visualize training data from ImageNet"
    ]
   },
   {
@@ -182,12 +206,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./configs/local_net_distillation.yaml', 'r') as f:\n",
-    "    config = yaml.safe_load(f)\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Reproducibility\n",
-    "pl.seed_everything(config['seed'])"
+    "image_net_train_data_module = ImageNetDataModule(dataset, config['batch_size'])\n",
+    "\n",
+    "batch = next(iter(image_net_train_data_module.train_dataloader()))\n",
+    "\n",
+    "# Print statistics\n",
+    "print(f\"Batch shape: {batch.shape}\")\n",
+    "print(f\"Batch min: {batch.min()}\")\n",
+    "print(f\"Batch max: {batch.max()}\")\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 5, figsize=(15, 5))\n",
+    "for i in range(5):\n",
+    "    ax[i].imshow(batch[i].squeeze(), cmap='gray')\n",
+    "    ax[i].axis('off')\n",
+    "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir lightning_logs/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the Distillation config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
