Removed huggingface ImageNet implementation from main jupyter notebook

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -133,101 +133,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Huggingface imports"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Required imports to use ImageNet from Hugging Face\n",
-    "!pip install -U \"huggingface_hub[cli]\"\n",
-    "!pip install datasets\n",
-    "# To login, `huggingface_hub` requires a token generated from https://huggingface.co/settings/tokens\n",
-    "!huggingface-cli login"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Mount Google Drive in Colab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from google.colab import drive\n",
-    "# Will provide you with an authentication link\n",
-    "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set Cache Directory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from datasets import load_dataset\n",
-    "\n",
-    "# Set a path on your Google Drive for the cache\n",
-    "cache_dir = '/content/drive/MyDrive/ImageNet'\n",
-    "\n",
-    "# Make sure the cache directory exists\n",
-    "os.makedirs(cache_dir, exist_ok=True)\n",
-    "\n",
-    "# Load the dataset with specified cache directory\n",
-    "dataset = load_dataset('imagenet-1k', cache_dir=cache_dir)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Visualize training data from ImageNet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "image_net_train_data_module = ImageNetDataModule(dataset, config['batch_size'])\n",
-    "\n",
-    "batch = next(iter(image_net_train_data_module.train_dataloader()))\n",
-    "\n",
-    "# Print statistics\n",
-    "print(f\"Batch shape: {batch.shape}\")\n",
-    "print(f\"Batch min: {batch.min()}\")\n",
-    "print(f\"Batch max: {batch.max()}\")\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 5, figsize=(15, 5))\n",
-    "for i in range(5):\n",
-    "    ax[i].imshow(batch[i].squeeze(), cmap='gray')\n",
-    "    ax[i].axis('off')\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Set up tensorboard"
    ]
   },
@@ -245,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the Distillation config"
+    "## Save distilled model"
    ]
   },
   {
@@ -253,7 +158,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.save(local_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/LocalNet/local_net_distilled.pth')"
+   ]
   }
  ],
  "metadata": {
