Added block to remount

--- a/ImageNet_Dataset_Setup.ipynb
+++ b/ImageNet_Dataset_Setup.ipynb
@@ -41,6 +41,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Only call in case drive needs to be remounted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drive.mount('/content/drive', force_remount=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Set target directory for download of ImageNet"
    ]
   },
