Loads image paths from Google Drive, to be used for data module

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -133,6 +133,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Load jsons from Google Drive that contains all file paths to training/val sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def load_image_paths(file_path):\n",
+    "    with open(file_path, 'r') as f:\n",
+    "        return json.load(f)\n",
+    "\n",
+    "train_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/train_image_paths.json')\n",
+    "val_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/val_image_paths.json')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_module = ImageNetDataModule(train_image_paths, val_image_paths, batch_size=config['batch_size'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Set up tensorboard"
    ]
   },
