Set up distillation pipeline

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -55,11 +55,14 @@
    "source": [
     "import pytorch_lightning as pl\n",
     "import yaml\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from model.local_net import LocalNet\n",
     "from model.model_utils import load_resnet_18_teacher_model\n",
     "from model.student_training_module import StudentTrainingModule\n",
     "from image_net_data_loader import ImageNetDataModule\n",
+    "from model.one_layer_decoder import OneLayerDecoder\n",
     "\n",
     "# autoreload imported modules\n",
     "%load_ext autoreload\n",
@@ -133,7 +136,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load jsons from Google Drive that contains all file paths to training/val sets"
+    "Mount current Colab session to Google Drive (training/val images are stored here)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "# Will provide you with an authentication link\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create data module for ImageNet"
    ]
   },
   {
@@ -149,7 +170,16 @@
     "        return json.load(f)\n",
     "\n",
     "train_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/train_image_paths.json')\n",
-    "val_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/val_image_paths.json')\n"
+    "val_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/val_image_paths.json')\n",
+    "\n",
+    "data_module = ImageNetDataModule(train_image_paths, val_image_paths, batch_size=config['batch_size'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot patches for Local-Net and ResNet-18"
    ]
   },
   {
@@ -158,7 +188,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_module = ImageNetDataModule(train_image_paths, val_image_paths, batch_size=config['batch_size'])"
+    "# make sure batch_size in data_module is equal to BATCH_SIZE\n",
+    "\n",
+    "BATCH_SIZE=10\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Reverse the normalization process done by ImageNetDataModule\n",
+    "# to avoid the following error:\n",
+    "# WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
+    "def denormalize(tensor):\n",
+    "    mean = torch.tensor([0.485, 0.456, 0.406]).view(1, 3, 1, 1)\n",
+    "    std = torch.tensor([0.229, 0.224, 0.225]).view(1, 3, 1, 1)\n",
+    "    tensor = tensor * std + mean  # Reverses the normalization in-place\n",
+    "    return tensor.clamp(0, 1)  # Ensures the pixel values are within [0, 1]\n",
+    "\n",
+    "\n",
+    "# Retrieve one batch of images\n",
+    "patch_local, patch_resnet = next(iter(data_module.train_dataloader()))\n",
+    "\n",
+    "# Denormalize the patches for visualization\n",
+    "patch_local = denormalize(patch_local)\n",
+    "patch_resnet = denormalize(patch_resnet)\n",
+    "\n",
+    "fig, ax = plt.subplots(2, BATCH_SIZE, figsize=(20, 8))  # 2 rows, BATCH_SIZE columns\n",
+    "\n",
+    "# Plotting patch_local images in the first row\n",
+    "for i in range(BATCH_SIZE):\n",
+    "    # Permute the tensor to the format (H, W, C)\n",
+    "    image = patch_local[i].permute(1, 2, 0)\n",
+    "\n",
+    "    # Display the image\n",
+    "    ax[0, i].imshow(image.cpu().numpy())\n",
+    "    ax[0, i].axis('off')\n",
+    "\n",
+    "# Plotting patch_resnet images in the second row\n",
+    "for i in range(BATCH_SIZE):\n",
+    "    # Permute the tensor to the format (H, W, C)\n",
+    "    image = patch_resnet[i].permute(1, 2, 0)\n",
+    "\n",
+    "    # Display the image\n",
+    "    ax[1, i].imshow(image.cpu().numpy())\n",
+    "    ax[1, i].axis('off')\n",
+    "\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -176,6 +249,151 @@
    "source": [
     "%load_ext tensorboard\n",
     "%tensorboard --logdir lightning_logs/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up all models for distillation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming 'device' is either 'cuda' if a GPU is available, otherwise 'cpu'\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "local_net = LocalNet(config).to(device)\n",
+    "resnet_18 = load_resnet_18_teacher_model('resnet18-5c106cde.pth', device)\n",
+    "decoder = OneLayerDecoder(config['local_net_output_dimensions'], \n",
+    "                          config['resnet_output_dimensions']).to(device)\n",
+    "\n",
+    "student_train_module = StudentTrainingModule(\n",
+    "    config, \n",
+    "    student_model=local_net, \n",
+    "    teacher_model=resnet_18, \n",
+    "    decoder=decoder, \n",
+    "    mode='distillation'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate number of epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Given by paper is batch size of 64 for 50k iterations\n",
+    "# Need to calculate max_epochs\n",
+    "total_iterations = config['iterations']\n",
+    "batch_size = config['batch_size']\n",
+    "num_training_images = len(train_image_paths)\n",
+    "# Calculate max_epochs\n",
+    "max_epochs = total_iterations / (num_training_images / batch_size)\n",
+    "max_epochs = int(max_epochs) + (max_epochs % 1 > 0)  # round up if not an integer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Crete callbacks for training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytorch_lightning.callbacks import ModelCheckpoint\n",
+    "\n",
+    "# Setup the checkpoint callback\n",
+    "checkpoint_callback = ModelCheckpoint(\n",
+    "    dirpath=\"/content/drive/MyDrive/AnomalyDetection/LocalNet/Checkpoints\",  # Path where checkpoints will be saved\n",
+    "    filename=\"{epoch}-{val_loss:.2f}\",  # Filename template\n",
+    "    monitor=\"val_loss\",  # Metric to monitor for saving\n",
+    "    every_n_epochs=1,  # Save every epoch\n",
+    "    save_weights_only=True  # If True, save only the model weights, not the full model\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup new trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "trainer = pl.Trainer(\n",
+    "    max_epochs=max_epochs,\n",
+    "    gpus=1 if torch.cuda.is_available() else 0,\n",
+    "    callbacks=[checkpoint_callback],\n",
+    "    logger=[\n",
+    "        pl.loggers.TensorBoardLogger(save_dir='./')\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup trainer from checkpoint\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change <CHECK_POINT.ckpt> to a valid checkpoint file located in\n",
+    "# /content/drive/MyDrive/AnomalyDetection/LocalNet/Checkpoints/\n",
+    "\n",
+    "trainer = pl.Trainer(\n",
+    "    max_epochs=max_epochs,\n",
+    "    gpus=1 if torch.cuda.is_available() else 0,\n",
+    "    callbacks=[checkpoint_callback],\n",
+    "    resume_from_checkpoint=\"/content/drive/MyDrive/AnomalyDetection/LocalNet/Checkpoints/<CHECK_POINT.ckpt>\",\n",
+    "    logger=[\n",
+    "        pl.loggers.TensorBoardLogger(save_dir='./')\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run distillation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.fit(student_train_module, datamodule=data_module)"
    ]
   },
   {
