Added option to set num_workers for ImageNetDataModule

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -172,7 +172,7 @@
     "train_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/train_image_paths.json')\n",
     "val_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/val_image_paths.json')\n",
     "\n",
-    "data_module = ImageNetDataModule(train_image_paths, val_image_paths, batch_size=config['batch_size'])"
+    "data_module = ImageNetDataModule(train_image_paths, val_image_paths, batch_size=config['batch_size'], num_workers=4)"
    ]
   },
   {
