Removed Jupyter Notebook-Specific Syntax, causing error

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -154,6 +154,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Copy data from Google Drive to Colab VM's local storage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Create data module for ImageNet"
    ]
   },
