--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -57,6 +57,8 @@
     "import yaml\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
+    "import json\n",
+    "from google.colab import drive\n",
     "\n",
     "from model.local_net import LocalNet\n",
     "from model.model_utils import load_resnet_18_teacher_model\n",
@@ -145,7 +147,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import drive\n",
     "# Will provide you with an authentication link\n",
     "drive.mount('/content/drive')"
    ]
@@ -162,7 +163,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Copy training and validation zips from Google Drive\n",
+    "!cp \"/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/train.zip\" \"/content/\"\n",
+    "!cp \"/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/val.zip\" \"/content/\"\n",
+    "\n",
+    "# Unzip\n",
+    "!unzip \"/content/train.zip\" -d \"/content/train\"\n",
+    "!unzip \"/content/val.zip\" -d \"/content/val\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,16 +186,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "def load_image_paths(file_path):\n",
     "    with open(file_path, 'r') as f:\n",
     "        return json.load(f)\n",
     "\n",
-    "train_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/train_image_paths.json')\n",
-    "val_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/val_image_paths.json')\n",
+    "train_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/train_image_local_paths.json')\n",
+    "val_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/val_image_local_paths.json')\n",
     "\n",
-    "data_module = ImageNetDataModule(train_image_paths, val_image_paths, batch_size=config['batch_size'], num_workers=4)"
+    "data_module = ImageNetDataModule(\n",
+    "    train_image_paths, \n",
+    "    val_image_paths, \n",
+    "    batch_size=config['batch_size'], \n",
+    "    num_workers=4, \n",
+    "    caching_strategy='none'\n",
+    ")"
    ]
   },
   {
@@ -204,9 +217,7 @@
    "source": [
     "# make sure batch_size in data_module is equal to BATCH_SIZE\n",
     "\n",
-    "BATCH_SIZE=10\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
+    "BATCH_SIZE=config['batch_size']\n",
     "\n",
     "# Reverse the normalization process done by ImageNetDataModule\n",
     "# to avoid the following error:\n",
@@ -245,7 +256,7 @@
     "    ax[1, i].imshow(image.cpu().numpy())\n",
     "    ax[1, i].axis('off')\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -292,7 +303,7 @@
     "    teacher_model=resnet_18, \n",
     "    decoder=decoder, \n",
     "    mode='distillation'\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -359,7 +370,8 @@
     "\n",
     "trainer = pl.Trainer(\n",
     "    max_epochs=max_epochs,\n",
-    "    gpus=1 if torch.cuda.is_available() else 0,\n",
+    "    accelerator='gpu' if torch.cuda.is_available() else 'cpu',\n",
+    "    devices=1,\n",
     "    callbacks=[checkpoint_callback],\n",
     "    logger=[\n",
     "        pl.loggers.TensorBoardLogger(save_dir='./')\n",
