--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -397,7 +397,8 @@
     "\n",
     "trainer = pl.Trainer(\n",
     "    max_epochs=max_epochs,\n",
-    "    gpus=1 if torch.cuda.is_available() else 0,\n",
+    "    accelerator='gpu' if torch.cuda.is_available() else 'cpu',\n",
+    "    devices=1,\n",
     "    callbacks=[checkpoint_callback],\n",
     "    resume_from_checkpoint=\"/content/drive/MyDrive/AnomalyDetection/LocalNet/Checkpoints/<CHECK_POINT.ckpt>\",\n",
     "    logger=[\n",
