Solved device bug

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -165,12 +165,18 @@
    "outputs": [],
    "source": [
     "# Copy training and validation zips from Google Drive\n",
+    "# Takes ~ 15 min\n",
     "!cp \"/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/train.zip\" \"/content/\"\n",
     "!cp \"/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/val.zip\" \"/content/\"\n",
     "\n",
     "# Unzip\n",
+    "# Takes ~ 7 min\n",
     "!unzip \"/content/train.zip\" -d \"/content/train\"\n",
-    "!unzip \"/content/val.zip\" -d \"/content/val\""
+    "!unzip \"/content/val.zip\" -d \"/content/val\"\n",
+    "\n",
+    "# Delete the zip files to free up space\n",
+    "!rm \"/content/train.zip\"\n",
+    "!rm \"/content/val.zip\""
    ]
   },
   {
@@ -290,7 +296,7 @@
    "outputs": [],
    "source": [
     "# Assuming 'device' is either 'cuda' if a GPU is available, otherwise 'cpu'\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "local_net = LocalNet(config).to(device)\n",
     "resnet_18 = load_resnet_18_teacher_model('resnet18-5c106cde.pth', device)\n",
