Added moving files after copying zip files from Google Drive

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -165,7 +165,7 @@
    "outputs": [],
    "source": [
     "# Copy training and validation zips from Google Drive\n",
-    "# Takes ~ 15 min\n",
+    "# Takes ~ 7 - 15 min\n",
     "!cp \"/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/train.zip\" \"/content/\"\n",
     "!cp \"/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/val.zip\" \"/content/\"\n",
     "\n",
@@ -176,7 +176,13 @@
     "\n",
     "# Delete the zip files to free up space\n",
     "!rm \"/content/train.zip\"\n",
-    "!rm \"/content/val.zip\""
+    "!rm \"/content/val.zip\"\n",
+    "\n",
+    "# Move files to correct places\n",
+    "!mv \"/content/train/content/train/* /content/train/\"\n",
+    "!rm -rf \"/content/train/content\"\n",
+    "!mv \"/content/val/content/val/*\" \"/content/val/\"\n",
+    "!rm -rf \"/content/val/content\""
    ]
   },
   {
@@ -205,7 +211,10 @@
     "    batch_size=config['batch_size'], \n",
     "    num_workers=4, \n",
     "    caching_strategy='none'\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(f\"Number of training images: {len(train_image_paths)}\")\n",
+    "print(f\"Number of validation images: {len(val_image_paths)}\""
    ]
   },
   {
@@ -332,7 +341,8 @@
     "num_training_images = len(train_image_paths)\n",
     "# Calculate max_epochs\n",
     "max_epochs = total_iterations / (num_training_images / batch_size)\n",
-    "max_epochs = int(max_epochs) + (max_epochs % 1 > 0)  # round up if not an integer"
+    "max_epochs = int(max_epochs) + (max_epochs % 1 > 0)  # round up if not an integer\n",
+    "print(f\"Calculated max_epochs: {max_epochs}\")"
    ]
   },
   {
