--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -214,7 +214,7 @@
     ")\n",
     "\n",
     "print(f\"Number of training images: {len(train_image_paths)}\")\n",
-    "print(f\"Number of validation images: {len(val_image_paths)}\""
+    "print(f\"Number of validation images: {len(val_image_paths)}\")"
    ]
   },
   {
@@ -362,7 +362,7 @@
     "\n",
     "# Setup the checkpoint callback\n",
     "checkpoint_callback = ModelCheckpoint(\n",
-    "    dirpath=\"/content/drive/MyDrive/AnomalyDetection/LocalNet/Checkpoints\",  # Path where checkpoints will be saved\n",
+    "    dirpath=\"/content/drive/MyDrive/AnomalyDetection/LocalNet/Distillation/Checkpoints\",  # Path where checkpoints will be saved\n",
     "    filename=\"{epoch}-{val_loss:.2f}\",  # Filename template\n",
     "    monitor=\"val_loss\",  # Metric to monitor for saving\n",
     "    every_n_epochs=1,  # Save every epoch\n",
@@ -416,7 +416,7 @@
     "    accelerator='gpu' if torch.cuda.is_available() else 'cpu',\n",
     "    devices=1,\n",
     "    callbacks=[checkpoint_callback],\n",
-    "    resume_from_checkpoint=\"/content/drive/MyDrive/AnomalyDetection/LocalNet/Checkpoints/<CHECK_POINT.ckpt>\",\n",
+    "    resume_from_checkpoint=\"/content/drive/MyDrive/AnomalyDetection/LocalNet/Distillation/Checkpoints/<CHECK_POINT.ckpt>\",\n",
     "    logger=[\n",
     "        pl.loggers.TensorBoardLogger(save_dir='./')\n",
     "    ]\n",
@@ -452,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(local_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/LocalNet/local_net_distilled.pth')"
+    "torch.save(local_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/LocalNet/Distillation/Trained Models/local_net_distilled.pth')"
    ]
   }
  ],
