Added transfer of MVTec AD dataset from gdrive

--- a/main_framework.ipynb
+++ b/main_framework.ipynb
@@ -75,13 +75,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Pre-training\n",
+    "# Pre-training\n",
     "\n",
-    "Until next numbered step the following code blocks will be part of the training of Local-Net. This is refered to as the pre-training of the framework, since the Local-Nets parameters will be fixed during training of Global-Net and DAD-head. This consists of two major steps:\n",
+    "The following code blocks will be part of the training of Local-Net. This is refered to as the pre-training of the framework, since the Local-Nets parameters will be fixed during training of Global-Net and DAD-head. This consists of two major steps:\n",
     "\n",
     "* **Distillation**: on ImageNet, where the teacher network is pretrained ResNet-18.\n",
-    "* **Fine-tuning**: on some certain category of MVTec AD\n",
-    "\n",
+    "* **Fine-tuning**: on some certain category of MVTec AD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Distillation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Pre-processing in accordance (*) to ResNet-18 documentation\n",
     "@ https://pytorch.org/vision/main/models/generated/torchvision.models.resnet18.html\n",
     "\n",
@@ -453,6 +465,38 @@
    "outputs": [],
    "source": [
     "torch.save(local_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/LocalNet/Distillation/Trained Models/local_net_distilled.pth')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Fine-tuning\n",
+    "\n",
+    "Local-Net has now been distilled from pre-trained ResNet-18 on ImageNet, and will in this part be fine-tuned. It is fine-tuned into a specific category in MVTec AD with the same loss as that in distillation. Here, the category ***zippers*** have been chosen, as it looks interesting, and it also got 0.99 in pixel-level AUROC, and 0.992 in per-region-overlap (PRO)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and visualize data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Copy zipped file of zipper dataset from Google Drive to current Colab session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp \"/content/drive/MyDrive/AnomalyDetection/Datasets/MVTec/zipper.tar.xz\" \"/content/\""
    ]
   }
  ],
